# Polymarket-Bot

./: .env.template  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
prompts/: active.json
prompts/v1/: market_analysis.json  metadata.json
src/: config.py  constants.py
src/ai/: analysis_types.py  claude_client.py  prompt_manager.py
src/data/: blockchain.py  clob_client.py  market_types.py  websocket_client.py
src/db/: database.py  models.py  queries.py
src/monitoring/: logger.py
