[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Automated Polymarket trading bot powered by Claude AI"
requires-python = ">=3.11"
dependencies = [
    # Layer 1 - Data & Market Access
    "py-clob-client>=0.15.0",
    "web3>=7.0.0",
    "websockets>=13.0",
    "python-dotenv>=1.0.0",

    # Layer 2 - AI Brain
    "anthropic>=0.40.0",
    "httpx>=0.27.0",

    # Layer 3 - Math Engine
    "numpy>=1.26.0",

    # Layer 4 - Execution
    "aiosqlite>=0.20.0",

    # Layer 5 - Monitoring
    "aiogram>=3.13.0",

    # Infrastructure
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
